New Crowdin updates (#1963)
* Update source file strings.xml

* Update source file strings.xml

* New translations strings.xml (Greek)

* New translations strings.xml (Greek)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Turkish)

* New translations strings.xml (Russian)

* New translations strings.xml (Korean)

* New translations strings.xml (Arabic)

* New translations strings.xml (Korean)

* New translations strings.xml (Italian)

* New translations strings.xml (Italian)

* New translations strings.xml (Italian)

* New translations strings.xml (Persian)

* New translations strings.xml (Persian)

* New translations strings.xml (Malay)

* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Arabic)

* New translations strings.xml (German)

* New translations strings.xml (Greek)

* New translations strings.xml (Finnish)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Korean)

* New translations strings.xml (Dutch)

* New translations strings.xml (Punjabi)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Russian)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Indonesian)

* New translations strings.xml (Persian)

* New translations strings.xml (Marathi)

* New translations strings.xml (Thai)

* New translations strings.xml (Hindi)

* New translation

--- a/app-games/src/main/res/values-pt-rPT/strings.xml
+++ b/app-games/src/main/res/values-pt-rPT/strings.xml
@@ -75,7 +75,7 @@
   <string name="button_back_title">Voltar</string>
   <string name="button_see_all_title">Ver Tudo</string>
   <string name="editorials_view_no_content_message">Ups, ainda não há conteúdo aqui!</string>
-  <string name="error_no_content_body">Oops, we couldn\'t find related content yet!</string>
+  <string name="error_no_content_body">Ups, ainda não conseguimos encontrar conteúdos relacionados!</string>
   <string name="button_update_title">Atualizar</string>
   <string name="button_open_app_title">Abrir</string>
   <string name="install_waiting_download_message">A aguardar pelo download</string>
@@ -86,17 +86,19 @@
   <string name="try_again">Por favor, tenta novamente.</string>
   <string name="please_wait">Por favor aguarda.</string>
   <string name="ok_button">Ok</string>
-  <string name="cancel_button">Cancel</string>
+  <string name="cancel_button">Cancelar</string>
   <string name="download_now_button">Faz Download Agora</string>
   <string name="uninstall_button">Desinstalar</string>
   <string name="go_back_button">Voltar Atrás</string>
-  <string name="go_back_to_game_button">Go Back to Game</string>
+  <string name="go_back_to_game_button">Voltar Para o Jogo</string>
   <string name="uninstalling">A desinstalar</string>
   <string name="resume_button">Continuar</string>
   <string name="waiting_for_connection">A aguardar ligação</string>
   <string name="wait_for_wifi_button">Espera por Wi-Fi</string>
   <string name="continue_button">Continuar</string>
-  <string name="error_install_permissions_body"><![CDATA[Please go to Settings and grant <1>Aptoide Games</1> permissions to install apps!]]></string>
+  <string name="error_install_permissions_body"><![CDATA[Vai a Definições e concede <1>Aptoide Games</1> permissões para instalar apps!]]></string>
+  <string name="latest_title">Latest</string>
+  <string name="whats_new_title">What\'s New</string>
   <!-- Out of Space -->
   <string name="out_of_space_title">Sem Espaço</string>
   <string name="out_of_space_body">Precisas de %s para continuar com a instalação.</string>
@@ -135,10 +137,10 @@
   <string name="appview_info_permissions_title" comment="permissions">Permissões</string>
   <string name="download_percentage_body" comment="1_s_of_2_s">%1$s%% de %2$s</string>
   <string name="error_short_title" comment="oops_an_error_occurred">Ups, ocorreu um erro</string>
-  <string name="purchase_done_bonus_title">Get a %s bonus!</string>
-  <string name="purchase_done_bonus_body">Download the AppCoins Wallet to get this bonus and use it in your next purchase.</string>
-  <string name="purchase_done_bonus_wallet_installed_title">AppCoins Wallet installed!</string>
-  <string name="purchase_done_bonus_wallet_installed_body">Open it to find your bonus.</string>
+  <string name="purchase_done_bonus_title">Recebe um bónus de %s!</string>
+  <string name="purchase_done_bonus_body">Faz download da AppCoins Wallet para receberes este bónus e utiliza-o na tua próxima compra.</string>
+  <string name="purchase_done_bonus_wallet_installed_title">AppCoins Wallet instalada!</string>
+  <string name="purchase_done_bonus_wallet_installed_body">Abra-a para encontrares o teu bónus.</string>
   <string name="bonus_banner_body">Vais receber um bónus em todos os jogos identificados com %s.</string>
   <string name="bonus_banner_title" comment="up_to_s_bonus">Até %s%% de Bónus</string>
   <string name="settings_payments_title" comment="contact_support_team">Contacta a Equipa Apoio</string>
@@ -190,23 +192,23 @@
   <string name="purchase_error_in_progress_title">O teu pedido já foi processado ou está em curso.</string>
   <string name="purchase_card_error_CVV_title">CVV/CVC errado</string>
   <string name="purchase_error_expired_card_title">Parece que o teu cartão expirou.</string>
-  <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
-  <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
+  <string name="iap_already_processing_title">Parece que esta compra já está a ser processada.</string>
+  <string name="iap_already_processing_body">Esta compra pode demorar algum tempo, por isso, aguarda até estar concluída ou contacta a nossa equipa de apoio.</string>
   <!-- Bonus Page -->
-  <string name="bonus_page_title_1">A Bonus on Every Purchase</string>
-  <string name="bonus_page_body_1">Look for the games identified with %1$s, install the AppCoins Wallet and get up to %2$s%% bonus in all purchases. You can then use this bonus to make your next purchases in your favorite games!</string>
-  <string name="bonus_page_title_2">Want More?</string>
-  <string name="bonus_page_body_2">You can get an extra %s%% bonus by using an Aptoide Games exclusive promo code in specific games. Stay tuned and you\'ll be notified!</string>
+  <string name="bonus_page_title_1">Um Bónus em Cada Compra</string>
+  <string name="bonus_page_body_1">Procura os jogos identificados com %1$s, instala a AppCoins Wallet e recebe até %2$s%% de bónus em todas as compras. Depois podes utilizar este bónus para fazeres as tuas próximas compras nos teus jogos favoritos!</string>
+  <string name="bonus_page_title_2">Queres Mais?</string>
+  <string name="bonus_page_body_2">Podes receber um bónus extra de %s%% utilizando um código promocional exclusivo da Aptoide Games em jogos específicos. Fica atento e serás notificado!</string>
   <!-- Promo Code -->
-  <string name="promo_code_install_wallet_banner_title">Up to %s%% Bonus in Every Purchase</string>
-  <string name="promo_code_install_wallet_banner_body">Use the AppCoins Wallet to make your in-app purchases and get a reward.</string>
-  <string name="promo_code_extra_title">Want More? Get %s%% Extra Bonus!</string>
-  <string name="promo_code_use_button">Use code</string>
-  <string name="promo_code_install_wallet_disclaimer">Install the AppCoins Wallet first.</string>
-  <string name="promo_code_notification_title">Redeem Your Promo Code</string>
-  <string name="promo_code_notification_body">Use your promo code to get extra bonuses in your favorite game.</string>
-  <string name="promo_code_notification_without_wallet_title">%s%% Extra Bonus!</string>
-  <string name="promo_code_notification_without_wallet_body">Get the AppCoins Wallet and use your promo code to get extra bonuses in all purchases.</string>
-  <string name="promo_code_share_title">You\'ve got a promo code!</string>
-  <string name="promo_code_share_body">Use this promo code to get extra bonuses in your favorite game.</string>
+  <string name="promo_code_install_wallet_banner_title">Até %s%% de Bónus em Cada Compra</string>
+  <string name="promo_code_install_wallet_banner_body">Utiliza a AppCoins Wallet para fazeres as tuas compras na app e receberes uma recompensa.</string>
+  <string name="promo_code_extra_title">Queres mais? Recebe %s%% de bónus extra!</string>
+  <string name="promo_code_use_button">Utilizar código</string>
+  <string name="promo_code_install_wallet_disclaimer">Instala primeiro a AppCoins Wallet.</string>
+  <string name="promo_code_notification_title">Redime o Teu Código Promocional</string>
+  <string name="promo_code_notification_body">Utiliza o teu código promocional para receberes bónus extra no teu jogo favorito.</string>
+  <string name="promo_code_notification_without_wallet_title">%s%% Bónus Extra!</string>
+  <string name="promo_code_notification_without_wallet_body">Adquire a AppCoins Wallet e utiliza o teu código promocional para receberes bónus extra em todas as compras.</string>
+  <string name="promo_code_share_title">Tens um código promocional!</string>
+  <string name="promo_code_share_body">Utiliza este código promocional para receberes bónus extra no teu jogo favorito.</string>
 </resources>
