--- a/app-games/src/main/res/values-ms-rMY/strings.xml
+++ b/app-games/src/main/res/values-ms-rMY/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Aptoide Games</string>
+  <string name="app_name">Permainan Aptoide</string>
   <!-- Bottom Bar -->
   <string name="games">Permainan</string>
   <string name="categories">Kategori</string>
@@ -75,7 +75,7 @@
   <string name="button_back_title">Kembali</string>
   <string name="button_see_all_title">Lihat Semua</string>
   <string name="editorials_view_no_content_message">Oops belum ada kandungan di sini!</string>
-  <string name="error_no_content_body">Oops, we couldn\'t find related content yet!</string>
+  <string name="error_no_content_body">Oops, kami tak jumpa kandungan berkaitan!</string>
   <string name="button_update_title">Kemas kini</string>
   <string name="button_open_app_title">Buka</string>
   <string name="install_waiting_download_message">Menunggu muat turun</string>
@@ -86,17 +86,19 @@
   <string name="try_again">Sila cuba lagi.</string>
   <string name="please_wait">Sila tunggu.</string>
   <string name="ok_button">Ok</string>
-  <string name="cancel_button">Cancel</string>
+  <string name="cancel_button">Batal</string>
   <string name="download_now_button">Muat Turun Sekarang</string>
   <string name="uninstall_button">Nyahpasang</string>
   <string name="go_back_button">Kembali</string>
-  <string name="go_back_to_game_button">Go Back to Game</string>
+  <string name="go_back_to_game_button">Kembali ke Permainan</string>
   <string name="uninstalling">Sedang Nyahpasang</string>
   <string name="resume_button">Sambung semula</string>
   <string name="waiting_for_connection">Menunggu sambungan</string>
   <string name="wait_for_wifi_button">Tunggu Wi-Fi</string>
   <string name="continue_button">Teruskan</string>
-  <string name="error_install_permissions_body"><![CDATA[Please go to Settings and grant <1>Aptoide Games</1> permissions to install apps!]]></string>
+  <string name="error_install_permissions_body"><![CDATA[Sila pergi ke Tetapan dan izinkan <1>Permainan Aptoide</1> untuk pasang aplikasi!]]></string>
+  <string name="latest_title">Latest</string>
+  <string name="whats_new_title">What\'s New</string>
   <!-- Out of Space -->
   <string name="out_of_space_title">Tiada Ruang</string>
   <string name="out_of_space_body">Anda perlu %s untuk teruskan pemasangan.</string>
@@ -135,10 +137,10 @@
   <string name="appview_info_permissions_title" comment="permissions">Kebenaran</string>
   <string name="download_percentage_body" comment="1_s_of_2_s">%1$s%% daripada %2$s</string>
   <string name="error_short_title" comment="oops_an_error_occurred">Oops, ada ralat</string>
-  <string name="purchase_done_bonus_title">Get a %s bonus!</string>
-  <string name="purchase_done_bonus_body">Download the AppCoins Wallet to get this bonus and use it in your next purchase.</string>
-  <string name="purchase_done_bonus_wallet_installed_title">AppCoins Wallet installed!</string>
-  <string name="purchase_done_bonus_wallet_installed_body">Open it to find your bonus.</string>
+  <string name="purchase_done_bonus_title">Dapatkan bonus %s!</string>
+  <string name="purchase_done_bonus_body">Muat turun Dompet AppCoins untuk peroleh bonus ini dan guna dalam pembelian seterusnya.</string>
+  <string name="purchase_done_bonus_wallet_installed_title">Dompet AppCoins Terpasang!</string>
+  <string name="purchase_done_bonus_wallet_installed_body">Buka untuk temui bonus anda.</string>
   <string name="bonus_banner_body">Anda akan terima bonus dalam semua permainan bertanda %s.</string>
   <string name="bonus_banner_title" comment="up_to_s_bonus">Bonus sehingga %s%%</string>
   <string name="settings_payments_title" comment="contact_support_team">Hubungi Pasukan Sokongan</string>
@@ -190,23 +192,23 @@
   <string name="purchase_error_in_progress_title">Permintaan anda telah diproses atau sedang diselesaikan.</string>
   <string name="purchase_card_error_CVV_title">CVV/CVC salah</string>
   <string name="purchase_error_expired_card_title">Kad anda luput.</string>
-  <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
-  <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
+  <string name="iap_already_processing_title">Nampaknya pembelian ini sedang diproses.</string>
+  <string name="iap_already_processing_body">Pembelian belum selesai, jadi sila tunggu sebentar atau hubungi Pasukan Sokongan kami.</string>
   <!-- Bonus Page -->
-  <string name="bonus_page_title_1">A Bonus on Every Purchase</string>
-  <string name="bonus_page_body_1">Look for the games identified with %1$s, install the AppCoins Wallet and get up to %2$s%% bonus in all purchases. You can then use this bonus to make your next purchases in your favorite games!</string>
-  <string name="bonus_page_title_2">Want More?</string>
-  <string name="bonus_page_body_2">You can get an extra %s%% bonus by using an Aptoide Games exclusive promo code in specific games. Stay tuned and you\'ll be notified!</string>
+  <string name="bonus_page_title_1">Bonus bagi Setiap Pembelian</string>
+  <string name="bonus_page_body_1">Cari permainan yg bertanda %1$s, pasang Dompet AppCoins dan dapatkan bonus sehingga %2$s dalam semua pembelian. Anda boleh guna bonus ini untuk buat pembelian seterusnya dalam permainan kegemaran anda!</string>
+  <string name="bonus_page_title_2">Nak Lagi?</string>
+  <string name="bonus_page_body_2">Anda boleh dapat bonus ekstra %s%% dengan gunakan kod promo istimewa Permainan Aptoide dlm permainan terpilih. Terus ikuti perkembangan kami!</string>
   <!-- Promo Code -->
-  <string name="promo_code_install_wallet_banner_title">Up to %s%% Bonus in Every Purchase</string>
-  <string name="promo_code_install_wallet_banner_body">Use the AppCoins Wallet to make your in-app purchases and get a reward.</string>
-  <string name="promo_code_extra_title">Want More? Get %s%% Extra Bonus!</string>
-  <string name="promo_code_use_button">Use code</string>
-  <string name="promo_code_install_wallet_disclaimer">Install the AppCoins Wallet first.</string>
-  <string name="promo_code_notification_title">Redeem Your Promo Code</string>
-  <string name="promo_code_notification_body">Use your promo code to get extra bonuses in your favorite game.</string>
-  <string name="promo_code_notification_without_wallet_title">%s%% Extra Bonus!</string>
-  <string name="promo_code_notification_without_wallet_body">Get the AppCoins Wallet and use your promo code to get extra bonuses in all purchases.</string>
-  <string name="promo_code_share_title">You\'ve got a promo code!</string>
-  <string name="promo_code_share_body">Use this promo code to get extra bonuses in your favorite game.</string>
+  <string name="promo_code_install_wallet_banner_title">Bonus sehingga %s%% dalam Setiap Pembelian</string>
+  <string name="promo_code_install_wallet_banner_body">Gunakan Dompet AppCoins untuk buat pembelian dalam aplikasi dan dapatkan ganjaran.</string>
+  <string name="promo_code_extra_title">Nak Lagi? Dapatkan Bonus Ekstra %s%%!</string>
+  <string name="promo_code_use_button">Guna kod</string>
+  <string name="promo_code_install_wallet_disclaimer">Pasang Dompet AppCoins dulu.</string>
+  <string name="promo_code_notification_title">Tebus Kod Promo Anda</string>
+  <string name="promo_code_notification_body">Guna kod promo anda untuk dapatkan bonus ekstra dalam permainan kegemaran anda.</string>
+  <string name="promo_code_notification_without_wallet_title">Bonus Ekstra %s%%!</string>
+  <string name="promo_code_notification_without_wallet_body">Dapatkan Dompet AppCoins dan gunakan kod promo anda untuk peroleh bonus ekstra dalam semua pembelian.</string>
+  <string name="promo_code_share_title">Anda ada kod promo!</string>
+  <string name="promo_code_share_body">Guna kod promo ini untuk dapatkan bonus ekstra dalam permainan kegemaran anda.</string>
 </resources>
