New Crowdin updates (#1977)
* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Spanish)

* New translations strings.xml (Italian)

* New translations strings.xml (Turkish)

--- a/app-games/src/main/res/values-pt-rBR/strings.xml
+++ b/app-games/src/main/res/values-pt-rBR/strings.xml
@@ -75,7 +75,7 @@
   <string name="button_back_title">Voltar</string>
   <string name="button_see_all_title">Ver Tudo</string>
   <string name="editorials_view_no_content_message">Ops, ainda não há conteúdo aqui!</string>
-  <string name="error_no_content_body">Oops, we couldn\'t find related content yet!</string>
+  <string name="error_no_content_body">Ops, ainda não conseguimos encontrar conteúdo relacionado!</string>
   <string name="button_update_title">Atualizar</string>
   <string name="button_open_app_title">Abrir</string>
   <string name="install_waiting_download_message">Aguardando baixar</string>
@@ -86,19 +86,19 @@
   <string name="try_again">Por favor, tente novamente.</string>
   <string name="please_wait">Por favor, aguarde.</string>
   <string name="ok_button">Ok</string>
-  <string name="cancel_button">Cancel</string>
+  <string name="cancel_button">Cancelar</string>
   <string name="download_now_button">Fazer o Download Agora</string>
   <string name="uninstall_button">Desinstalar</string>
   <string name="go_back_button">Voltar</string>
-  <string name="go_back_to_game_button">Go Back to Game</string>
+  <string name="go_back_to_game_button">Voltar à Página Inicial</string>
   <string name="uninstalling">Desinstalado</string>
   <string name="resume_button">Resumir</string>
   <string name="waiting_for_connection">Aguardando conexão</string>
   <string name="wait_for_wifi_button">Esperar pelo Wi-Fi</string>
   <string name="continue_button">Continuar</string>
-  <string name="error_install_permissions_body"><![CDATA[Please go to Settings and grant <1>Aptoide Games</1> permissions to install apps!]]></string>
-  <string name="latest_title">Latest</string>
-  <string name="whats_new_title">What\'s New</string>
+  <string name="error_install_permissions_body"><![CDATA[Por favor, vá em Configurações e conceda permissões ao <1>Aptoide Games</1> para instalar apps!]]></string>
+  <string name="latest_title">Mais Recentes</string>
+  <string name="whats_new_title">Novidades</string>
   <!-- Out of Space -->
   <string name="out_of_space_title">Sem Espaço Disponível</string>
   <string name="out_of_space_body">Você precisa de %s para continuar a instalação.</string>
@@ -137,10 +137,10 @@
   <string name="appview_info_permissions_title" comment="permissions">Permissões</string>
   <string name="download_percentage_body" comment="1_s_of_2_s">%1$s%% de %2$s</string>
   <string name="error_short_title" comment="oops_an_error_occurred">Ops, ocorreu um erro</string>
-  <string name="purchase_done_bonus_title">Get a %s bonus!</string>
-  <string name="purchase_done_bonus_body">Download the AppCoins Wallet to get this bonus and use it in your next purchase.</string>
-  <string name="purchase_done_bonus_wallet_installed_title">AppCoins Wallet installed!</string>
-  <string name="purchase_done_bonus_wallet_installed_body">Open it to find your bonus.</string>
+  <string name="purchase_done_bonus_title">Receba um bônus de %s!</string>
+  <string name="purchase_done_bonus_body">Baixe o AppCoins Wallet para receber este bônus e utilizar em sua próxima compra.</string>
+  <string name="purchase_done_bonus_wallet_installed_title">AppCoins Wallet foi instalado!</string>
+  <string name="purchase_done_bonus_wallet_installed_body">Abra-o para descobrir seu bônus.</string>
   <string name="bonus_banner_body">Você receberá um bônus em todos os jogos identificados com %s.</string>
   <string name="bonus_banner_title" comment="up_to_s_bonus">Até %s%% de bônus</string>
   <string name="settings_payments_title" comment="contact_support_team">Falar com a Equipe de Suporte</string>
@@ -192,23 +192,23 @@
   <string name="purchase_error_in_progress_title">Sua solicitação já foi processada ou está em andamento.</string>
   <string name="purchase_card_error_CVV_title">CVV/CVC incorreto</string>
   <string name="purchase_error_expired_card_title">Parece que o seu cartão expirou.</string>
-  <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
-  <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
+  <string name="iap_already_processing_title">Parece que esta compra já está sendo processada.</string>
+  <string name="iap_already_processing_body">Essa compra pode demorar um pouco, então, por favor, aguarde até ser concluída ou entre em contato com nossa Equipe de Suporte.</string>
   <!-- Bonus Page -->
-  <string name="bonus_page_title_1">A Bonus on Every Purchase</string>
-  <string name="bonus_page_body_1">Look for the games identified with %1$s, install the AppCoins Wallet and get up to %2$s%% bonus in all purchases. You can then use this bonus to make your next purchases in your favorite games!</string>
-  <string name="bonus_page_title_2">Want More?</string>
-  <string name="bonus_page_body_2">You can get an extra %s%% bonus by using an Aptoide Games exclusive promo code in specific games. Stay tuned and you\'ll be notified!</string>
+  <string name="bonus_page_title_1">Um Bônus em Cada Compra</string>
+  <string name="bonus_page_body_1">Encontre os jogos identificados com %1$s, instale o AppCoins Wallet e ganhe até %2$s%% de bônus em todas as compras. Você poderá usar esse bônus em suas próximas compras nos seus jogos favoritos!</string>
+  <string name="bonus_page_title_2">Quer Mais?</string>
+  <string name="bonus_page_body_2">Você pode ganhar um bônus extra de %s%% usando um código promocional exclusivo do Aptoide Games em jogos específicos. Fique atento para as notificações!</string>
   <!-- Promo Code -->
-  <string name="promo_code_install_wallet_banner_title">Up to %s%% Bonus in Every Purchase</string>
-  <string name="promo_code_install_wallet_banner_body">Use the AppCoins Wallet to make your in-app purchases and get a reward.</string>
-  <string name="promo_code_extra_title">Want More? Get %s%% Extra Bonus!</string>
-  <string name="promo_code_use_button">Use code</string>
-  <string name="promo_code_install_wallet_disclaimer">Install the AppCoins Wallet first.</string>
-  <string name="promo_code_notification_title">Redeem Your Promo Code</string>
-  <string name="promo_code_notification_body">Use your promo code to get extra bonuses in your favorite game.</string>
-  <string name="promo_code_notification_without_wallet_title">%s%% Extra Bonus!</string>
-  <string name="promo_code_notification_without_wallet_body">Get the AppCoins Wallet and use your promo code to get extra bonuses in all purchases.</string>
-  <string name="promo_code_share_title">You\'ve got a promo code!</string>
-  <string name="promo_code_share_body">Use this promo code to get extra bonuses in your favorite game.</string>
+  <string name="promo_code_install_wallet_banner_title">Até %s%% de Bônus em Cada Compra</string>
+  <string name="promo_code_install_wallet_banner_body">Use o AppCoins Wallet para fazer suas compras dentro do aplicativo e ganhe uma recompensa.</string>
+  <string name="promo_code_extra_title">Quer Mais? Receba um Bônus Extra de %s%%!</string>
+  <string name="promo_code_use_button">Utilizar código</string>
+  <string name="promo_code_install_wallet_disclaimer">Primeiro, instale o AppCoins Wallet.</string>
+  <string name="promo_code_notification_title">Resgate seu Código</string>
+  <string name="promo_code_notification_body">Use seu código promocional para obter bônus extras no seu jogo favorito.</string>
+  <string name="promo_code_notification_without_wallet_title">Bônus Extra de %s%%!</string>
+  <string name="promo_code_notification_without_wallet_body">Baixe o AppCoins Wallet e use seu código promocional para receber bônus extras em todas as compras.</string>
+  <string name="promo_code_share_title">Você recebeu um código promocional!</string>
+  <string name="promo_code_share_body">Use este código promocional para obter bônus extras no seu jogo favorito.</string>
 </resources>
